--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@wordpress/scripts": "^30.12.0"
   },
   "dependencies": {
+    "@wordpress/interactivity": "^6.19.0",
     "clsx": "^2.1.1",
     "remove-accents": "^0.5.0"
   }
