--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
   "license": "GPL-2.0-or-later",
   "main": "build/blocks/form/index.js",
   "scripts": {
-    "build": "wp-scripts build",
+    "build": "wp-scripts build --experimental-modules",
     "format": "wp-scripts format",
     "lint:css": "wp-scripts lint-style",
     "lint:js": "wp-scripts lint-js",
     "packages-update": "wp-scripts packages-update",
     "plugin-zip": "wp-scripts plugin-zip",
-    "start": "wp-scripts start"
+    "start": "wp-scripts start --experimental-modules"
   },
   "devDependencies": {
     "@wordpress/scripts": "^30.12.0"
