--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
   },
   "dependencies": {
     "@wordpress/interactivity": "^6.19.0",
-    "clsx": "^2.1.1",
-    "remove-accents": "^0.5.0"
+    "clsx": "^2.1.1"
   }
 }
