--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@wordpress/interactivity": "^6.19.0",
-    "clsx": "^2.1.1"
+    "clsx": "^2.1.1",
+    "uuid": "^11.1.0"
   }
 }
