--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     }
   },
   "require": {
-    "php": "^8.0",
+    "php": ">=8.2",
     "composer-plugin-api": "^2.3",
     "yahnis-elsts/plugin-update-checker": "^5.5"
   },
