--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@wordpress/scripts": "^30.12.0"
   },
   "dependencies": {
+    "@10up/block-components": "^1.22.1",
     "@wordpress/interactivity": "^6.19.0",
     "clsx": "^2.1.1",
     "inputmask": "^5.0.9",
